src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__duplicate_function.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0214] Error 1: the name `foo` is defined multiple times
  Labels:
    - previous definition here
