src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__generic_inference_failure.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0202] Error 1: cannot infer type `fn(?1) -> ?1`; type annotations needed
