src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__mutate_immutable.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0238] Error 1: cannot assign twice to immutable variable `x`
  Suggestions:
    - consider making `x` mutable: `let mut x`
