src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__parse_unclosed_brace.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
Error 1: expected `}`, found end of file
