src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__struct_missing_field.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0225] Error 1: missing field `y` in initializer of `Point`
