src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__struct_unknown_field.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0230] Error 1: unknown field `z` on type `Point`
