src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__too_many_args.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0211] Error 1: this function takes 1 argument(s) but 3 were supplied
  Labels:
    - function `single` defined here
