src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__type_mismatch_function_arg.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0201] Error 1: type mismatch: expected `i32`, found `&str`
