src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__undefined_module_path.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
Error 1: `::` is deprecated as a path separator; use `.` instead
