src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__undefined_type.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0203] Error 1: cannot find type `UnknownType` in this scope
