src/bootstrap/bloodc/src/snapshots/bloodc__ui_tests__while_condition_not_bool.snap
---
source: bloodc/src/ui_tests.rs
expression: formatted
---
[E0201] Error 1: type mismatch: expected `bool`, found `&str`
